fix: cropped hero image

--- a/app/globals.css
+++ b/app/globals.css
@@ -163,6 +163,7 @@
 
 html {
   scroll-behavior: smooth;
+  font-size: 18px;
 }
 
 .skeleton {
